[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Bunker/EnemyTroop.gd" type="Script" id=2]
[ext_resource path="res://Assets/Bunker/Fascist.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=25]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 145, 0, 145, 260 )

[sub_resource type="AtlasTexture" id=26]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 145, 260, 145, 260 )

[sub_resource type="AtlasTexture" id=27]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 145, 520, 145, 260 )

[sub_resource type="AtlasTexture" id=28]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 145, 780, 145, 260 )

[sub_resource type="AtlasTexture" id=37]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 580, 260, 145, 260 )

[sub_resource type="AtlasTexture" id=38]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 435, 520, 145, 260 )

[sub_resource type="AtlasTexture" id=39]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 580, 520, 145, 260 )

[sub_resource type="AtlasTexture" id=40]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 435, 780, 145, 260 )

[sub_resource type="AtlasTexture" id=29]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 290, 0, 145, 260 )

[sub_resource type="AtlasTexture" id=30]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 290, 260, 145, 260 )

[sub_resource type="AtlasTexture" id=31]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 290, 520, 145, 260 )

[sub_resource type="AtlasTexture" id=32]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 290, 780, 145, 260 )

[sub_resource type="AtlasTexture" id=41]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 435, 0, 145, 260 )

[sub_resource type="AtlasTexture" id=42]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 435, 260, 145, 260 )

[sub_resource type="AtlasTexture" id=33]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 145, 260 )

[sub_resource type="AtlasTexture" id=34]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 0, 260, 145, 260 )

[sub_resource type="AtlasTexture" id=35]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 0, 520, 145, 260 )

[sub_resource type="AtlasTexture" id=36]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 0, 780, 145, 260 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Back",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": false,
"name": "Die",
"speed": 10.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "Front",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Shoot",
"speed": 12.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "Side",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=14]
extents = Vector3( 3, 1, 1 )

[sub_resource type="CubeMesh" id=15]
size = Vector3( 6, 2, 2 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.0196078 )

[sub_resource type="BoxShape" id=17]
extents = Vector3( 0.25, 2, 0.25 )

[node name="EnemyTroop" type="Spatial"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite3D" parent="."]
billboard = 2
shaded = true
frames = SubResource( 5 )
animation = "Front"
frame = 2
playing = true

[node name="FOV" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="FOV"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0 )
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="FOV"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0 )
layers = 2
mesh = SubResource( 15 )
material/0 = SubResource( 16 )

[node name="CollisionShape2" type="CollisionShape" parent="FOV"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0 )
shape = SubResource( 14 )

[node name="MeshInstance2" type="MeshInstance" parent="FOV"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0 )
layers = 2
mesh = SubResource( 15 )
material/0 = SubResource( 16 )

[node name="CollisionShape3" type="CollisionShape" parent="FOV"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.31134e-07, 0, -3 )
shape = SubResource( 14 )

[node name="MeshInstance3" type="MeshInstance" parent="FOV"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.31134e-07, 0, -3 )
layers = 2
mesh = SubResource( 15 )
material/0 = SubResource( 16 )

[node name="CollisionShape4" type="CollisionShape" parent="FOV"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.31134e-07, 0, 3 )
shape = SubResource( 14 )

[node name="MeshInstance4" type="MeshInstance" parent="FOV"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.31134e-07, 0, 3 )
layers = 2
mesh = SubResource( 15 )
material/0 = SubResource( 16 )

[node name="Core" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Core"]
shape = SubResource( 17 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="area_entered" from="FOV" to="." method="_on_FOV_area_entered"]
[connection signal="area_exited" from="FOV" to="." method="_on_FOV_area_exited"]
[connection signal="area_entered" from="Core" to="." method="_on_Core_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
